--- a/frontend/src/Estilos/formResponsable.css
+++ b/frontend/src/Estilos/formResponsable.css
@@ -149,7 +149,7 @@
 
 .form-responsive input {
     padding: 8px;
-    border: 1px solid #ccc;
+    border: 1px solid white;
     border-radius: 4px;
     margin-bottom: 10px;
 }
